# opkg

./: .gitignore  CHANGELOG.md  Makefile.am  NEWS  README.md  configure.ac
docs/: CONTRIBUTING.md  MAINTAINING.md  ROADMAP.md  SECURITY.md
libopkg/: Makefile.am  file_util.c  file_util.h  md5.c  opkg_archive.c  opkg_cmd.c  opkg_conf.c  opkg_conf.h  opkg_download.c  opkg_download.h  opkg_download_curl.c  opkg_install.c  opkg_openssl.c  opkg_openssl.h  opkg_remove.c  opkg_verify.c  pkg.c  pkg_hash.c  pkg_hash.h  pkg_parse.c
libopkg/solvers/libsolv/: opkg_solver_libsolv.c
m4/: gpgme.m4
man/: opkg.1.in  opkg.conf.5.in
scripts/: make-dist.sh
src/: opkg.c
tests/: Makefile  README.md  opk.py  opkgcl.py
tests/core/: 19_no_recommends.py  20_exclude.py  44_search.py  45_install_preexisting.py
tests/regress/: issue10461a.py  issue10461b.py  issue13574.py  issue14178.py  issue14459.py
tests/security/: cve_2020_7982.py
utils/: opkg-key
